--- a/src/asset/css/navbar/navstylelama.css
+++ b/src/asset/css/navbar/navstylelama.css
@@ -1,151 +1,7 @@
-/* .header_style_01 {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.3);
-  font-size: 12px;
-  height: 100px;
-}
-
-.header_style_01 a {
-  color: #fff;
-  margin-top: 5px;
-  font-weight: bold;
-  font-size: 0.8vw;
-}
-
-.header_style_02 {
-  position: fixed;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-  font-size: 12px;
-  height: 100px;
-}
-
-.header_style_02 a {
-  color: #fff;
-  margin-top: 5px;
-  font-weight: bold;
-  font-size: 0.8vw;
-}
-
-.header-body {
-  background-color: #000000;
-} */
-/*
-.header_style_01 .navbar-default {
-  background-color: black;
-  border: 0;
-  border-radius: 0px;
-} */
-
-/* .header_style_01 .navbar,
-.header_style_01 .navbar-nav,
-.header_style_01 .navbar-default,
-.header_style_01 .nav {
-  margin-bottom: 0 !important;
-}
-
-.navbar-brand img {
-  width: 10%;
-}
-
-
-.header_style_01 .navbar-default .navbar-nav > li > a {
-  color: #ffffff;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  text-transform: capitalize;
-  background-color: transparent;
-}
-
-.header_style_01 .navbar-default .navbar-nav > li a {
-  background-color: transparent;
-}
-
-body.host_version .header_style_01 .navbar-default .navbar-nav > li:hover a,
-body.host_version .header_style_01 .navbar-default .navbar-nav > li:focus a {
-  color: #00aeef;
-}
-
-body.host_version .header_style_01 .navbar-default .navbar-nav > li a.active {
-  color: #00aeef;
-}
-
-.header_style_01 .navbar-right > li {
-  margin-top: 2px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-body.host_version .header_style_01 .navbar-right > li .log:hover {
-  background: #00aeef;
-  color: #fff !important;
-  border-color: #00aeef !important;
-}
-
-.header_style_01 .navbar-right > li > a {
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-
-li.social-links {
-  margin: 0 8px;
-}
-
-li.social-links a {
-  padding: 13px 0 !important;
-}
-
-.affix-top {
-  overflow: hidden;
-  visibility: visible;
-  opacity: 1;
-  top: -100%;
-}
-
-.affix {
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  padding: 20px 40px;
-  background-color: #1f1f1f !important;
-  -webkit-transition: visibility 0.95s ease-in-out, opacity 0.95s ease-in-out,
-    bottom 0.95s ease-in-out, top 0.95s ease-in-out, left 0.95s ease-in-out,
-    right 0.95s ease-in-out;
-  -moz-transition: visibility 0.95s ease-in-out, opacity 0.95s ease-in-out,
-    bottom 0.95s ease-in-out, top 0.95s ease-in-out, left 0.95s ease-in-out,
-    right 0.95s ease-in-out;
-  -o-transition: visibility 0.95s ease-in-out, opacity 0.95s ease-in-out,
-    bottom 0.95s ease-in-out, top 0.95s ease-in-out, left 0.95s ease-in-out,
-    right 0.95s ease-in-out;
-  transition: visibility 0.95s ease-in-out, opacity 0.95s ease-in-out,
-    top 0.95s ease-in-out, bottom 0.95s ease-in-out, left 0.95s ease-in-out,
-    right 0.95s ease-in-out;
-}
-
-.navbar-nav li {
-  position: fixed;
-}
-
-.navbar-nav span {
-  font-size: 12px;
-  position: absolute;
-  right: 2px;
-  top: 13px;
-} */
-
 .nav-brand {
-  position: static;
-  max-width: 150px;
-  max-height: 90px;
-  margin-top: -15px;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: 15px;
+  max-width: 90%;
+  height: auto;
+  margin-top: -10px;
 }
 
 .PopoverNav {
