--- a/src/asset/css/jurnal/jurnal.css
+++ b/src/asset/css/jurnal/jurnal.css
@@ -406,6 +406,31 @@
     margin-top: 5%;
   }
 }
+  .notice .nama-notice-jurnalmore{
+    width: 100%;
+    height:auto;
+    margin-top: 20px;
+    margin-left: -15px;
+  }
+
+  .notice .nama-notice-jurnalmore h6{
+    font-size: 10px;
+    color: grey;
+  }
+
+  .gallery .lineBawah{
+    margin-top: -20px;
+    margin-bottom: 20px;
+    width: 80px;
+    border-bottom: 4px solid #e50006;
+  }
+
+  .gallery .lineBawahNews{
+    margin-top: -20px;
+    margin-bottom: 20px;
+    width: 115px;
+    border-bottom: 4px solid #e50006;
+  }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
