--- a/src/asset/css/smiactivity/smiactivity.css
+++ b/src/asset/css/smiactivity/smiactivity.css
@@ -8,12 +8,15 @@
 
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 420px;
 }
 
 .myTable {
     font-size: 14px;
     color: #000;
+}
+.body h1 {
+    font-family: AvenirHeavy, sans-serif;
 }
 
 .box-announcement .announcement-title {
@@ -93,7 +96,7 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     height: 100%;
     min-height: 320px;
-    margin-top: 2%;
+    margin-top: 5%;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
     border: 2px solid #bdc3c7;
@@ -227,13 +230,13 @@ body::-webkit-scrollbar-thumb {
 }
 
 .happybirthday-date .img-box {
-    width: 100%;
-    height: 100%;
+    width: 50%;
     border-radius: 50%;
-    max-width: 200px;
-    max-height: 200px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     margin-top: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .happybirthday-date .img-box img {
