--- a/src/asset/css/article/article.css
+++ b/src/asset/css/article/article.css
@@ -6,6 +6,7 @@
 .article-judul {
   width: 100%;
   height: auto;
+  padding-bottom: 20px;
   /* border: 1px solid #000000; */
 }
 
@@ -602,9 +603,9 @@
   float: right;
 }
 
-.thumbsLike:hover{
+/* .thumbsLike:hover{
   color: #87DAAD;
-}
+} */
 
 .recent-comment {
   padding: 1%;
@@ -695,6 +696,12 @@
 @media only screen and (max-width: 600px) {
   .article-judul h1 {
     font-size: 5vw;
+  }
+
+  .nav-link .article-tagcategory {
+    background: aquamarine;
+    padding: 12px 16px 12px 16px;
+    border-radius: 6px;
   }
 
   .article-judul h1 a {
