--- a/src/asset/css/sminews/sminews.css
+++ b/src/asset/css/sminews/sminews.css
@@ -8,7 +8,7 @@
   border-radius: 10%;
   position: relative;
   width: 100%;
-  max-width: 860px;
+  /* max-width: 860px; */
   height: auto;
   margin-left: 10px;
   margin-bottom: 50px;
