--- a/src/asset/css/black-dashboard-react.css
+++ b/src/asset/css/black-dashboard-react.css
@@ -12194,6 +12194,8 @@ textarea.form-control {
   width: 100%;
   margin-bottom: 30px;
   /* box-shadow: 0 1px 20px 0px rgba(0, 0, 0, 0.1);  */
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 
   }
   .card label {
