--- a/src/asset/css/jurnal/jurnal.css
+++ b/src/asset/css/jurnal/jurnal.css
@@ -1,7 +1,7 @@
 .banner-jurnal {
   width: 100%;
   height: auto;
-  border: 2px solid #bdc3c7;
+  /* border: 2px solid #e50006; */
   margin-top: 5%;
 
   border-radius: 6px;
@@ -9,9 +9,11 @@
 
 .banner-jurnal .banner-title {
   width: 100%;
-  height: 80px;
-  border: 1px solid #bdc3c7;
+  height: 75px;
+  border: 1px solid #ffffff;
   background: #e50006;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .banner-jurnal .banner-title h2 {
@@ -63,7 +65,7 @@
 /* Magazine list */
 
 .magazine-list {
-  margin-top: -350px;
+  margin-top: 5%;
   width: 100%;
   height: auto;
   border-radius: 6px;
@@ -74,7 +76,14 @@
   color: #ffffff;
   text-align: center;
   background: #e50006;
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
+  font-weight: bold;
+  font-size: 4vw;
+  height: 70px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  padding: 1px;
+
 }
 
 .magazine-list .magazine-box {
@@ -108,7 +117,7 @@
 
 .magazine .title-magazine {
   color: #000000;
-  font-size: 0.8vw;
+  font-size: 16px;
   font-weight: bold;
 }
 
@@ -133,8 +142,9 @@
 }
 
 .magazine .date-magazine p {
-  color: #000000;
-  font-weight: bold;
+  color:rgba(0, 0, 0, .5);
+  font-weight: 600;
+  font-size: 14px;
 }
 
 /* Advertisment */
@@ -171,7 +181,7 @@
   width: 100%;
   height: auto;
   min-width: 200px;
-  max-width: 250px;
+  /* max-width: 250px; */
   min-height: 200px;
   max-height: 200px;
 }
@@ -181,7 +191,7 @@
   font-weight: bold;
   color: #000000;
   border-bottom: 4px solid #e50006;
-  width: 18%;
+  width: 15%;
   min-width: 100px;
   margin-bottom: 2%;
 }
@@ -196,10 +206,11 @@
 .newspaper-jurnal .newspaper img {
   width: 100%;
   height: 100%;
-  min-height: 300px;
+  max-height: 400px;
   object-fit: fill;
   object-position: 50% 50%; /* default value: image is centered*/
   object-position: 0 0; /* positioned top left of the content box */
+  padding: 0 5px 0 5px;
 }
 /*
 .newspaper .middle {
@@ -391,7 +402,7 @@
     color: #000000;
   }
 
-  .newspaper-jurnal h2 {
+  /* .newspaper-jurnal h2 {
     font-size: 5vw;
     font-weight: bold;
     color: #000000;
@@ -399,7 +410,7 @@
     width: 20%;
     min-width: 100px;
     margin-bottom: 5%;
-  }
+  } */
   .newspaper-jurnal .newspaper {
     width: 100%;
 
