--- a/src/asset/css/smiactivity/smiactivity.css
+++ b/src/asset/css/smiactivity/smiactivity.css
@@ -24,7 +24,7 @@
     height: 80px;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
-    border: 1px solid #1e2b3a;
+    border: 1px solid #ffffff;
     background: #1e2b3a;
     background-color: #e50006; /* For browsers that do not support gradients */
 }
@@ -219,7 +219,7 @@ body::-webkit-scrollbar-thumb {
 .happybirthday-date {
     margin-top: 5%;
     width: 100%;
-    padding: 2%;
+    padding-bottom: 5%;
     height: auto;
 }
 
@@ -227,6 +227,10 @@ body::-webkit-scrollbar-thumb {
     font-size: 1.5vw;
     font-weight: bold;
     color: #000000;
+    border-bottom: 4px solid #e50006;
+    width: 30%;
+    margin-bottom: 2%;
+    padding-top: 12px;
 }
 
 .happybirthday-date .img-box {
@@ -256,6 +260,7 @@ body::-webkit-scrollbar-thumb {
 .happybirthday-date h5 {
     text-align: center;
     color: #000000;
+    margin: 0 0 0 0;
 }
 
 /* Gallery */
@@ -298,6 +303,10 @@ body::-webkit-scrollbar-thumb {
     font-size: 1.5vw;
     font-weight: bold;
     color: #000000;
+    border-bottom: 4px solid #e50006;
+    width: 42%;
+    margin-bottom: 2%;
+    padding-top: 12px;
 }
 
 .latest-video p {
