--- a/src/asset/css/smigallery/smigallery.css
+++ b/src/asset/css/smigallery/smigallery.css
@@ -42,16 +42,23 @@ button {
 
 .gallery h2 {
   font-size: 1.5vw;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
+  border-bottom: 4px solid #e50006;
+  width: 8%;
+  margin-bottom: 2%;
+  padding-top: 12px;
 }
 .gallery .gallery-box {
   margin-top: 5%;
   width: 100%;
   height: auto;
-  border: 1px solid #000000;
+  border: 2px solid #bdc3c7;
   border-radius: 10px;
   box-shadow: 1px 2px #e4e9ed;
+}
+.gallery .gallery-box .card {
+  background:transparent;
 }
 
 .gallery .gallery-box-display {
@@ -62,7 +69,8 @@ button {
 }
 
 .gallery .gallery-box img{
-  border-radius: 10%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .gallery .gallery-box .card {
@@ -89,6 +97,8 @@ button {
 
 .card-body h4 {
   color: #000000;
+  font-size: 16px;
+  font-weight: 600;
 }
 .card-body .text {
   color: #000000;
@@ -187,13 +197,19 @@ button {
 .box-sosmed h2 {
   font-size: 1.5vw;
   font-weight: bold;
+  color: #000000;
+  border-bottom: 4px solid #e50006;
+  width: 30%;
+  margin-bottom: 2%;
+  padding-top: 12px;
 }
 
 .sosmed {
   width: 100%;
   height: auto;
-  border: 3px solid red;
+  border: 2px solid #e50006;
   border-radius: 10px;
+  margin-top: 7%;
 }
 
 .frame {
